<resources>
    <string name="app_name">Green Guest</string>
    <string name="forest_background">forest_background</string>
    <string name="img_forest">img_forest</string>
    <string name="info1">Maraqlı fəaliyyətləri kəşf edin</string>
    <string name="next">Sonrakı</string>
    <string name="skip">Keç</string>
    <string name="info2">Yeni fəaliyyətləri araşdırın və gündəlik həyatınıza rəng qatın.</string>
    <string name="progress">progress</string>
    <string name="img_village">img_village</string>
    <string name="login">Giriş</string>
    <string name="registration">Qeydiyyat</string>
    <string name="img_house">img_house</string>
    <string name="info_6">Arzuladığınız evlərdə istirahət edin</string>
    <string name="info_5">Ehtiyaclarınıza uyğun ev tapmaq üçün indi axtarışa başlayın.</string>
    <string name="info_3">Organik kənd məhsulları əldə edin</string>
    <string name="info_4">Yerli fermerlər ilə əlaqə saxlayın və kənd məhsullarına bir-başa çıxış əldə edin.</string>
    <string name="app_logo">app logo</string>
    <string name="login_info">Bir-birindən fərqli aqroturizm fəaliyyətləri üçün hesabınıza daxil olun!</string>
    <string name="email">E-poçt ünvanınız</string>
    <string name="log_in">Daxil olun</string>
    <string name="password">Şifrəniz</string>
    <string name="your_email">Sizinemailiniz@gmail.com</string>
    <string name="password_visibility">password_visibility</string>
    <string name="forget_password">Şifrəni unutdunuz?</string>
    <string name="or">Və ya</string>
    <string name="login_via_google">Google ilə daxil olun</string>
    <string name="do_not_have_account">Hesabınız yoxdur?</string>
    <string name="register">&#160;Qeydiyatdan keçin</string>
    <string name="register_info">Bir-birindən fərqli aqroturizm fəaliyyətləri üçün qeydiyyatdan keçin!</string>
    <string name="username">İstifadəçi adınız</string>
    <string name="your_name">Adınız</string>
    <string name="confirm_password">Yenidən şifrəniz</string>
    <string name="already_have_account">Artıq hesabınız var?&#160;</string>
    <string name="register_via_google">Google ilə qeydiyyatdan keçin</string>
    <string name="back">back</string>
    <string name="renew_password">Şifrəni yenilə</string>
    <string name="send_link">Keçid göndər</string>
    <string name="create_new_password">Yeni şifrə yaradın</string>
    <string name="new_password_info">Daxil olmaq üçün öz yeni şifrənizi yaradın.</string>
    <string name="save">Yadda saxlayın</string>
    <string name="success_gif">success gif</string>
    <string name="continue_btn">Davam edin</string>
    <string name="password_changed_successfully">Şifrəniz uğurla yeniləndi!</string>
    <string name="continue_with_login">Şifrəniz uğurla yeniləndi. Daxil olma prosesinə davam edə bilərsiniz.</string>
    <string name="profile_image">profile_image</string>
    <string name="hello_elcin">Salam, Elçin</string>
    <string name="notification">notification</string>
    <string name="garden_to_market">Bağdan bazara</string>
    <string name="agriculturism_support">Aqroturizmin yerli fermerlərə dəstəyi</string>
    <string name="image_cow">image_cow</string>
    <string name="tips_place">tips place</string>
    <string name="splash_screen">splash_screen</string>
    <string name="green">Green</string>
    <string name="guest">Guest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="renew_pwd">Zəhmət olmasa, e-poçt ünvanınızı daxil edin və sizə şifrəni yeniləmək üçün bir keçid göndərək.</string>
    <string name="Home">Ev</string>
    <string name="profile">Profil</string>
    <string name="favorites">Sevimlilər</string>
    <string name="search">Axtarış</string>
</resources>