<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/Home"
        android:icon="@drawable/bottom_nav_home"
        app:showAsAction="never"/>
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/bottom_nav_search"
        app:showAsAction="never"/>
    <item
        android:id="@+id/favorites"
        android:title="@string/favorites"
        android:icon="@drawable/bottom_nav_favorites"
        app:showAsAction="never"/>
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/bottom_nav_profile"
        app:showAsAction="never"/>
</menu>