<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.onboarding.screens.FirstScreen">

    <ImageView
        android:id="@+id/img_forest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_forest"
        android:paddingVertical="48dp"
        android:paddingHorizontal="24dp"
        android:elevation="1dp"
        android:src="@drawable/img_forest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/forest_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_on_board_screen"
        android:contentDescription="@string/forest_background"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_forest"
        app:layout_constraintEnd_toEndOf="@+id/img_forest"
        app:layout_constraintStart_toStartOf="@+id/img_forest"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/progress"
        android:src="@drawable/ic_progress_dots_1"
        app:layout_constraintBottom_toTopOf="@+id/info1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_forest" />


    <TextView
        android:id="@+id/info1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/info1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/info2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_forest"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/info2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info2"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="@+id/info1"
        app:layout_constraintStart_toStartOf="@+id/info1"
        app:layout_constraintTop_toBottomOf="@+id/info1"
        app:layout_constraintVertical_chainStyle="packed"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:paddingHorizontal="32dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_forest"
        app:layout_constraintVertical_bias="0.8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/skip"
        android:textColor="@color/gray"
        android:layout_marginStart="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_forest"
        app:layout_constraintVertical_bias="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>